[gd_scene load_steps=39 format=2]

[ext_resource path="res://Sprites/Menus/readybutton.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu/custom_night_menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Menus/customicon.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menus/arrow.png" type="Texture" id=4]
[ext_resource path="res://Fonts/consola.ttf" type="DynamicFontData" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=35]
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=36]
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=37]
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=38]
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 640, 128, 128 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="DynamicFont" id=39]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=32]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=34]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=33]
size = 24
font_data = ExtResource( 5 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 559.0
margin_top = 600.0
margin_right = 722.0
margin_bottom = 644.0
texture_normal = ExtResource( 1 )

[node name="CandyIcon" type="AnimatedSprite" parent="."]
position = Vector2( 384, 260 )
frames = SubResource( 5 )
frame = 3
playing = true

[node name="left" type="TextureButton" parent="CandyIcon"]
margin_left = -64.0
margin_top = 68.0
margin_right = -20.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )
flip_h = true

[node name="right" type="TextureButton" parent="CandyIcon"]
margin_left = 20.0
margin_top = 68.0
margin_right = 64.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )

[node name="candylevel" type="RichTextLabel" parent="CandyIcon"]
margin_left = -26.0
margin_top = 72.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 35 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="CindyIcon" type="AnimatedSprite" parent="."]
position = Vector2( 640, 260 )
frames = SubResource( 10 )
frame = 1
playing = true

[node name="left" type="TextureButton" parent="CindyIcon"]
margin_left = -64.0
margin_top = 68.0
margin_right = -20.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )
flip_h = true

[node name="right" type="TextureButton" parent="CindyIcon"]
margin_left = 20.0
margin_top = 68.0
margin_right = 64.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )

[node name="cindylevel" type="RichTextLabel" parent="CindyIcon"]
margin_left = -26.0
margin_top = 72.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 36 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="ChesterIcon" type="AnimatedSprite" parent="."]
position = Vector2( 896, 260 )
frames = SubResource( 15 )
frame = 1
playing = true

[node name="left" type="TextureButton" parent="ChesterIcon"]
margin_left = -64.0
margin_top = 68.0
margin_right = -20.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )
flip_h = true

[node name="right" type="TextureButton" parent="ChesterIcon"]
margin_left = 20.0
margin_top = 68.0
margin_right = 64.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )

[node name="chesterlevel" type="RichTextLabel" parent="ChesterIcon"]
margin_left = -26.0
margin_top = 72.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 37 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="OldCatIcon" type="AnimatedSprite" parent="."]
position = Vector2( 512, 450 )
frames = SubResource( 20 )
frame = 2
playing = true

[node name="left" type="TextureButton" parent="OldCatIcon"]
margin_left = -64.0
margin_top = 68.0
margin_right = -20.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )
flip_h = true

[node name="right" type="TextureButton" parent="OldCatIcon"]
margin_left = 20.0
margin_top = 68.0
margin_right = 64.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )

[node name="oldlevel" type="RichTextLabel" parent="OldCatIcon"]
margin_left = -26.0
margin_top = 72.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 38 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="BlankIcon" type="AnimatedSprite" parent="."]
position = Vector2( 768, 450 )
frames = SubResource( 30 )
frame = 1
playing = true

[node name="left" type="TextureButton" parent="BlankIcon"]
margin_left = -64.0
margin_top = 68.0
margin_right = -20.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )
flip_h = true

[node name="right" type="TextureButton" parent="BlankIcon"]
margin_left = 20.0
margin_top = 68.0
margin_right = 64.0
margin_bottom = 108.0
texture_normal = ExtResource( 4 )

[node name="blanklevel" type="RichTextLabel" parent="BlankIcon"]
margin_left = -26.0
margin_top = 72.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 39 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 160.0
margin_top = 58.0
margin_right = 1130.0
margin_bottom = 209.0
custom_fonts/normal_font = SubResource( 32 )
bbcode_enabled = true
bbcode_text = "[center]-Cupcakes Framework Demonstration-[/center]
"
meta_underlined = false
text = "-Cupcakes Framework Demonstration-
"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 149.0
margin_top = 115.0
margin_right = 1143.0
margin_bottom = 262.0
custom_fonts/normal_font = SubResource( 34 )
bbcode_enabled = true
bbcode_text = "[center]Reminder this is a partial recreation and will not be expanded any further.
If you want to play the full game, [color=#77ff00]go play the original or the remaster.[/color]
[/center]
"
meta_underlined = false
text = "Reminder this is a partial recreation and will not be expanded any further.
If you want to play the full game, go play the original or the remaster.

"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 13.0
margin_top = 527.0
margin_right = 364.0
margin_bottom = 726.0
custom_fonts/normal_font = SubResource( 33 )
bbcode_enabled = true
bbcode_text = "[center]All the assets
in this project
are made by
[color=#77ff00]Emil Macko[/color]
and come from
[color=#77ff00]Five Nights at Candy's[/color][/center]
"
meta_underlined = false
text = "All the assets
in this project
are made by
Emil Macko
and come from
Five Nights at Candy's
"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 1000.0
margin_top = 630.0
margin_right = 1246.0
margin_bottom = 777.0
custom_fonts/normal_font = SubResource( 33 )
bbcode_enabled = true
bbcode_text = "[center]Programming
done by [color=#77ff00]Oplexitie[/color][/center]
"
meta_underlined = false
text = "Programming
done by Oplexitie
"

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="gui_input" from="CandyIcon/left" to="." method="_on_levelbutt_pressed" binds= [ 0, -1 ]]
[connection signal="gui_input" from="CandyIcon/right" to="." method="_on_levelbutt_pressed" binds= [ 0, 1 ]]
[connection signal="gui_input" from="CindyIcon/left" to="." method="_on_levelbutt_pressed" binds= [ 1, -1 ]]
[connection signal="gui_input" from="CindyIcon/right" to="." method="_on_levelbutt_pressed" binds= [ 1, 1 ]]
[connection signal="gui_input" from="ChesterIcon/left" to="." method="_on_levelbutt_pressed" binds= [ 2, -1 ]]
[connection signal="gui_input" from="ChesterIcon/right" to="." method="_on_levelbutt_pressed" binds= [ 2, 1 ]]
[connection signal="gui_input" from="OldCatIcon/left" to="." method="_on_levelbutt_pressed" binds= [ 3, -1 ]]
[connection signal="gui_input" from="OldCatIcon/right" to="." method="_on_levelbutt_pressed" binds= [ 3, 1 ]]
[connection signal="gui_input" from="BlankIcon/left" to="." method="_on_levelbutt_pressed" binds= [ 5, -1 ]]
[connection signal="gui_input" from="BlankIcon/right" to="." method="_on_levelbutt_pressed" binds= [ 5, 1 ]]
